Adjusting padding on bottom of iframe to match height of header to prevent clipping.

--- a/css/style.css
+++ b/css/style.css
@@ -59,4 +59,5 @@ a.button-help:hover {text-decoration:none; color:#004f16;}
 .paused  .button-plus, .paused .button-minus {display:inline-block;}
 .resizing .button-help, .resizing .sitetitle, .resizing .url-entry {display:none;}
 .resizing .header {height:3.1em;}
+.resizing .resizer {padding-bottom:3.1em;}
 .resizing .data-entry {text-align:left; margin:0;}
